crates/hird-check/tests/snapshots/tools__generic_tool_monomorphic_handler_accepted.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"effect Tool<t>\\n\\\n         effect Exn<t>\\n\\\n         type Prompt = Prompt(String)\\n\\\n         type Schema<t> = Schema(String)\\n\\\n         type ParseError = ParseError(String)\\n\\\n         tool LLMCall<t> : { prompt: Prompt, schema: Schema<t> } -> t ! {Exn<ParseError>}\\n\\\n         fn mock(args: { prompt: Prompt, schema: Schema<Int> }) -> Int = 42\\n\\\n         fn ask(p: Prompt, s: Schema<Int>) -> Int ! {Exn<ParseError>} =\\n\\\n           handle { Tool<LLMCall> -> mock } in llm_call({ prompt: p, schema: s })\")"
---
ParseError : String → ParseError
Prompt : String → Prompt
Schema : ∀a. String → Schema<a>
ask : Prompt → Schema<Int> → Int ! {Exn<ParseError>}
llm_call : ∀a. { prompt: Prompt, schema: Schema<a> } → a ! {Exn<ParseError>, Tool<LLMCall>}
mock : { prompt: Prompt, schema: Schema<Int> } → Int
record LLMCallInvocation : { args: { prompt: Prompt, schema: Schema<a> }, caller: CallerId, result: a, timestamp: Timestamp, tool: String }
