crates/hird-check/tests/snapshots/tools__generic_tool_use_at_an_unconstrained_type_is_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"tool Echo<t> : { v: t } -> t\\n\\\n         fn empty() -> () ! {Tool<Echo>} = let xs = echo({ v: [] }) in ()\")"
---
echo : ∀a. { v: a } → a ! {Tool<Echo>}
empty : () → () ! {Tool<Echo>}
record EchoInvocation : { args: { v: a }, caller: CallerId, result: a, timestamp: Timestamp, tool: String }
error[C0062] 72..76: this use of tool `Echo` instantiates its args at `{ v: List<e> }`, which is not known at compile time; a generic tool's invocations are recorded at the concrete types each use fixes
