crates/hird-check/tests/snapshots/tools__handle_mismatched_tool_handler_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"type Path = Path(String)\\n\\\n         type RepoState = RepoState(String)\\n\\\n         tool ReadRepo : { path: Path } -> RepoState\\n\\\n         fn wrong(x: Int) -> Int = x\\n\\\n         fn dry_run(p: Path) -> RepoState = handle { Tool<ReadRepo> -> wrong } in read_repo({ path: p })\")"
---
Path : String → Path
RepoState : String → RepoState
dry_run : Path → RepoState
read_repo : { path: Path } → RepoState ! {Tool<ReadRepo>}
wrong : Int → Int
record ReadRepoInvocation : { args: { path: Path }, caller: CallerId, result: RepoState, timestamp: Timestamp, tool: String }
error[C0034] 194..199: handler for tool `ReadRepo` must have type `{ path: Path } → RepoState`, but this has type `Int → Int`
